# s4_assets

./: CMakeLists.txt  cbt.sh
example/: CMakeLists.txt
example/src/: main.cpp
src/: CMakeLists.txt
src/assets/: assets.cpp  assets.hpp  assets_fwd.hpp  editor_assets.hpp  editor_assets_fwd.hpp  editor_manager.hpp  entry.hpp  id.hpp  ifilesystem.hpp  iserializer.hpp  manager.cpp  manager.hpp  manager_builder.hpp  node.cpp  node.hpp  path.hpp  ref.hpp  rel_path.hpp
test/: CMakeLists.txt
test/src/: asset.cpp  manager.cpp
