set(S4_ASSETS_MANAGER_INCLUDE ${CMAKE_CURRENT_LIST_DIR})

# gather source files list
file(GLOB_RECURSE S4_ASSETS_MANAGER_SRCS RELATIVE ${CMAKE_CURRENT_LIST_DIR}
    ${S4_ASSETS_MANAGER_INCLUDE}/*.cpp 
    ${S4_ASSETS_MANAGER_INCLUDE}/*.hpp 
    ${S4_ASSETS_MANAGER_INCLUDE}/*.hpp)
GenerateSourceGoups("${S4_ASSETS_MANAGER_SRCS}")

add_library(${S4_ASSETS_MANAGER_TARGET} STATIC ${S4_ASSETS_MANAGER_SRCS})
target_compile_features(${S4_ASSETS_MANAGER_TARGET} PUBLIC cxx_std_20)
target_include_directories(${S4_ASSETS_MANAGER_TARGET} PUBLIC ${S4_ASSETS_MANAGER_INCLUDE})